--- a/app/src/main/res/values-hi/strings.xml
+++ b/app/src/main/res/values-hi/strings.xml
@@ -3,7 +3,7 @@
     <string name="settings">सेटिंग्स</string>
 
     <string name="share">ऐप शेयर करें</string>
-    <string name="rate">ऐप को रेटिंग और रिव्यू दें</string>
+    <string name="rate">रेटिंग और रिव्यू दें</string>
     <string name="more">हमारे अन्य ऐप्स देखें</string>
     <string name="upgradeToPremium">प्रीमियम में अपग्रेड करें</string>
 
