--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,7 +123,7 @@
         <item>Utkarsh Small Finance Bank</item>
     </string-array>
 
-    <string name="notes_heading">Notes:</string>
+    <string name="notes_heading">Important Notes:</string>
     <string name="note_effective_date">1. The following interest rates are effective from 19 April 2025.</string>
     <string name="note_amount_limit">2. The following rates apply to deposits below ₹3 Crore.</string>
     <string name="note_min_tenure">3. Minimum deposit tenure is 7 days for most banks.</string>
