--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Financial Pro Calculator</string>
+    <string name="email">nirvaysofttech@gmail.com</string>
 
     <!-- Ads Activity -->
     <string name="admob_square_ad_unit">ca-app-pub-3940256099942544/6300978111</string>
