project name change Finance Pro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Financial Pro Calculator</string>
+    <string name="app_name">Finance Pro</string>
     <string name="email">nirvaysofttech@gmail.com</string>
 
     <!-- Ads Activity -->
